refactor: ScheduleService